# myroom-furniture

./: .env_sample  .gitignore  README.md  docker-compose.yml
myroom/: Dockerfile  core.py  fewshot.py  models.py  pyproject.toml  server.py  stt.py  util.py
myroom/resources/: environment.csv  fewshot.txt  prompt.txt  requests.txt
myroom/resources/fewshot/: add.jsonl  concept.jsonl  failure.jsonl  move.jsonl  multiple.jsonl  rotate.jsonl
myroom/resources/map/: map.html  map.js
myroom/resources/presets/: sample.csv
server/: Dockerfile  requirements.txt
server/srcs/: create_train_set.py  foundation.py  last.pt  main.py  main2.py  model.py  models.py  myroom.py  myroom_old.py  prompt  request  rule  server.py  stt.py  temp.csv  test.py  util.py
server/srcs/resources/: encoding_rule.txt  enviroment.csv  enviroment.txt  environment.csv  fewshot.txt  items.json  prompt.txt  requests.txt  train.jsonl
server/srcs/resources/dataset/: data.csv
server/srcs/resources/map/: map.html  map.js
server/srcs/resources/presets/: empty.csv  single_bed.csv  two_bed.csv
